kubernetes/base/ingress.yaml
---
# A Kubernetes ingress definition, which forwards all incoming HTTP traffic to
# the pygeoapi pods.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pygeoapi
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pygeoapi
                port:
                  name: http
